# xlsform2qgis

./: .actrc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: continuous_integration.yml  deploy_to_pypi.yml
samples/: repeat_over_selected.xlsx  survey_flooding_rapid_assessment.xlsx  survey_household_water.xlsx  survey_individual_assistance_pda.xlsx
src/xlsform2qgis/: converter.py  converter_old.py  converter_utils.py  qgis_utils.py  sheet_parser.py  type_defs.py  types.py  widgets.py  xlsform2qgis.py  xlsform_parser.py  xlsform_tokenizer.py  xlsforms.py
src/xlsform2qgis/expressions/: expression.py  functions.py  parser.py  registry.py  tokenizer.py  utils.py
tests/: test_converter_utils.py  test_expression.py  test_parse_expression.py  test_parsed_sheet.py  test_xlsform_parser.py  test_xlsform_tokenizer.py  test_xlsforms.py  test_xlsforms_old.py
tests/expressions/: test_expression.py  test_parser.py  test_registry.py  test_tokenizer.py
