[project]
name = "xlsform2qgis"
version = "0.1.0"
description = ""
authors = [
    {name = "Mathieu Pelerin",email = "mathieu@opengis.ch"},
    {name = "Ivan Ivanov",email = "ivan@opengis.ch"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
    "debugpy (>=1.8.17,<2.0.0)",
]

[project.scripts]
xlsform2qgis = "xlsform2qgis.xlsform2qgis:main"
