[project]
name = "xlsform2qgis"
version = "0.1.0"
description = "A library to convert XLSForms to QGIS project files"
authors = [
    {name = "Mathieu Pelerin",email = "mathieu@opengis.ch"},
    {name = "Ivan Ivanov",email = "ivan@opengis.ch"},
    {name = "Rakan Farhouda",email = "rakan@opengis.ch"}
]
license = { file = "LICENSE" }
keywords = [ "xlsform", "QGIS", "converter" ]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10,<4.0"
dependencies = [
]

[project.urls]
homepage = "https://github.com/opengisch/xlsform2qgis"
documentation = "https://github.com/opengisch/xlsform2qgis"
repository = "https://github.com/opengisch/xlsform2qgis"
tracker = "https://github.com/opengisch/xlsform2qgis/issues"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
    "debugpy (>=1.8.17,<2.0.0)",
]

[project.scripts]
xlsform2qgis = "xlsform2qgis.converter:main_cli"
